--- a/Proyecto3.ipynb
+++ b/Proyecto3.ipynb
@@ -2153,19 +2153,11 @@
     "    plt.xlabel(\"Configuración\"); plt.ylabel(\"Mejor costo\")\n",
     "    plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a31a0488",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mos_env",
    "language": "python",
    "name": "python3"
   },
